Fix sources button overlapping glyph entry

--- a/src/app/dialing-computer/components/address-row/address-row.component.scss
+++ b/src/app/dialing-computer/components/address-row/address-row.component.scss
@@ -69,3 +69,7 @@
 .edit-controls {
 	display: none;
 }
+
+sg-glyph-entry {
+	z-index: 10;
+}
